Zones vides dévoilées Plateau de couleur Detection de fin de game (presque il faut cliquer une fois en +) Click droit = Flag ( "P" )

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,22 @@ ol, ul {
   margin-bottom: 10px;
 }
 
-.square {
+.squareFlag{
+  background: #f90;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.squareNotDiscovered{
   background: #fff;
   border: 1px solid #999;
   float: left;
@@ -31,6 +46,53 @@ ol, ul {
   text-align: center;
   width: 34px;
 }
+
+.squareNull{
+  background: #5c5;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.squareNearMine{
+  background: #fe5;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.squareMine{
+  background: #f00;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+
 
 .square:focus {
   outline: none;
